--- a/less/index.less
+++ b/less/index.less
@@ -1,6 +1,21 @@
 // Import your less files here:
 
+// Vars and Mixins Here because they are lazy loaded
+@import "variables";
+@import "mixins";
 
+// General Styles Here
+@import "reset";
+@import "Global";
+
+// Components Here
+@import "navigation.less";
+// @import "cta";
+// @import "main-content";
+@import "footer";
+@import "home-page";
+
+// no styles here!
 
 
 
