--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,9 +1,9 @@
 // Home Content
 
 .home {
-
+  .center();
   .intro {
-
+    .center();
     h2 {
       padding: 15px;
     }
@@ -24,6 +24,7 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      
     }
   }
 
@@ -40,11 +41,13 @@
   }
 
   .walk {
+
     margin-top: 60px;
     border-top: 1px solid @main-border-color;
     padding: 50px 60px;
     display: flex;
-    justify-content: center;
+   justify-content: space-between;
+    flex-direction:row;
 
     .walk-text {
       width: 50%;
