container home fix

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,7 +5,7 @@
   background: #f4f4f4;
   width:100%;
   margin: 0 auto;
-//   width:200%;
+  width:200%;
   align-content: center;
   header {
     display: flex;
@@ -13,9 +13,6 @@
     justify-content: space-between;
     align-content: center;
 
-    @media @mobile {
-      flex-direction: column;
-    }
     h2 {
       .center();
       padding-bottom: 10px;
@@ -32,7 +29,7 @@
         color: black;
         @media @mobile {
         }
-      }
+      } 
     }
   }
 }
