--- a/css/index.css
+++ b/css/index.css
@@ -179,6 +179,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 10px;
   padding-bottom: 10px;
 }
 .navigation header nav {
@@ -186,11 +187,6 @@ p {
   justify-content: center;
   align-items: center;
   padding-bottom: 10px;
-}
-@media (max-width: 400px) {
-  .navigation header nav {
-    flex-direction: column;
-  }
 }
 .navigation header nav a {
   font-size: 1.6rem;
@@ -207,6 +203,20 @@ footer {
   justify-content: center;
   align-items: center;
 }
+.home .intro .space {
+  border-radius: 10px;
+  width: 100%;
+}
+@media (max-width: 400px) {
+  .home .intro .space {
+    width: 100%;
+  }
+}
+@media (max-width: 400px) {
+  .home .intro {
+    flex-direction: column;
+  }
+}
 .home .intro h2 {
   padding: 15px;
 }
@@ -218,11 +228,23 @@ footer {
   flex-wrap: wrap;
   width: 100%;
 }
+@media (max-width: 400px) {
+  .home .space-images {
+    flex-wrap: nowrap;
+    flex-direction: column;
+  }
+}
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 400px) {
+  .home .space-images img {
+    width: 90%;
+    margin-left: 20px;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -240,8 +262,18 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 400px) {
+  .home .walk {
+    flex-direction: column-reverse;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 400px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -252,6 +284,12 @@ footer {
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 400px) {
+  .home .walk .walk-img {
+    flex-direction: column;
+    width: 100%;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
