--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,29 +1,45 @@
 // Home Content
 
 .home {
-
   .intro {
+    .space {
+      border-radius: 10px;
+      width: 100%;
+      @media @mobile {
+        width: 100%;
+      }
+    }
+
+    @media @mobile {
+      flex-direction: column;
+    }
 
     h2 {
       padding: 15px;
     }
 
     p {
-      padding:0 15px;
+      padding: 0 15px;
     }
-  
   }
 
   .space-images {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-
+    @media @mobile {
+      flex-wrap: nowrap;
+      flex-direction: column;
+    }
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @mobile {
+        width: 90%;
+        margin-left: 20px;
+      }
     }
   }
 
@@ -45,10 +61,14 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
-
+    @media @mobile {
+      flex-direction: column-reverse;
+    }
     .walk-text {
       width: 50%;
-
+      @media @mobile {
+        width: 100%;
+      }
       h3 {
         margin-bottom: 10px;
       }
@@ -64,7 +84,12 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @mobile {
+        flex-direction: column;
+        width: 100%;
       
+      }
+
       img {
         width: 100%;
         height: auto;
@@ -72,4 +97,4 @@
       }
     }
   }
-}// home
+} // home
