--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,7 +5,6 @@
   background: #f4f4f4;
   width:100%;
   margin: 0 auto;
-  width:200%;
   align-content: center;
   header {
     display: flex;
@@ -15,13 +14,14 @@
 
     h2 {
       .center();
+      padding-top:10px;
       padding-bottom: 10px;
     }
     nav {
       .center();
       padding-bottom: 10px;
       @media @mobile {
-        flex-direction: column;
+
       }
       a {
         font-size: 1.6rem;
