--- a/css/index.css
+++ b/css/index.css
@@ -264,6 +264,7 @@ footer {
 }
 @media (max-width: 400px) {
   .home .walk {
+    padding: 50px 10px;
     flex-direction: column-reverse;
   }
 }
@@ -281,14 +282,36 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+.home .walk .walk-text .btn {
+  font-size: 16px;
+  background: black;
+  width: 84%;
+  height: 35px;
+  margin-top: 10px;
+  cursor: pointer;
+  text-align: center;
+  border-radius: 5px;
+  color: white;
+  padding: 9px 0;
+}
+@media (max-width: 400px) {
+  .home .walk .walk-text .btn {
+    font-size: 20px;
+    width: 100%;
+    Height: 50px;
+    text-align: center;
+    padding: 15px 0;
+    margin-bottom: 30px;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
 }
 @media (max-width: 400px) {
   .home .walk .walk-img {
-    flex-direction: column;
     width: 100%;
+    padding-bottom: 20px;
   }
 }
 .home .walk .walk-img img {
