--- a/less/home-page.less
+++ b/less/home-page.less
@@ -62,6 +62,7 @@
     display: flex;
     justify-content: center;
     @media @mobile {
+      padding: 50px 10px;
       flex-direction: column-reverse;
     }
     .walk-text {
@@ -78,6 +79,7 @@
       }
 
       .btn {
+        .btn(black, white);
       }
     }
 
@@ -85,9 +87,8 @@
       width: 46%;
       margin-left: 4%;
       @media @mobile {
-        flex-direction: column;
         width: 100%;
-      
+        padding-bottom: 20px;
       }
 
       img {
