--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,5 +6,29 @@
     align-items: center;
   }
 
+  .btn(@color, @font-color){
+    font-size: 16px;
+    background:@color;
+    width: 84%;
+    height: 35px;
+    margin-top: 10px;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 5px;
+    color:@font-color;
+    padding: 9px 0;
+
+
+    
+    @media @mobile{
+        font-size: 20px;
+        width: 100%;
+        Height:50px;
+        text-align: center;
+        padding: 15px 0;
+        margin-bottom:30px;
+    }
+  }
+
   
   
