done except grey top

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -9,7 +9,7 @@
   .btn(@color, @font-color){
     font-size: 16px;
     background:@color;
-    width: 84%;
+    width: 80px;
     height: 35px;
     margin-top: 10px;
     cursor: pointer;
@@ -19,8 +19,8 @@
     padding: 9px 0;
 
 
-    
-    @media @mobile{
+
+    @media @phone{
         font-size: 20px;
         width: 100%;
         Height:50px;
