--- a/less/navigation.less
+++ b/less/navigation.less
@@ -20,14 +20,14 @@
     nav {
       .center();
       padding-bottom: 10px;
-      @media @mobile {
+      @media @phone {
 
       }
       a {
         font-size: 1.6rem;
         padding-right: 20px;
         color: black;
-        @media @mobile {
+        @media @phone {
         }
       } 
     }
