--- a/css/index.css
+++ b/css/index.css
@@ -207,12 +207,12 @@ footer {
   border-radius: 10px;
   width: 100%;
 }
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   .home .intro .space {
     width: 100%;
   }
 }
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   .home .intro {
     flex-direction: column;
   }
@@ -228,10 +228,16 @@ footer {
   flex-wrap: wrap;
   width: 100%;
 }
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   .home .space-images {
     flex-wrap: nowrap;
     flex-direction: column;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .sky,
+  .home .space-images .launch {
+    display: none;
   }
 }
 .home .space-images img {
@@ -240,7 +246,7 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   .home .space-images img {
     width: 90%;
     margin-left: 20px;
@@ -262,7 +268,7 @@ footer {
   display: flex;
   justify-content: center;
 }
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   .home .walk {
     padding: 50px 10px;
     flex-direction: column-reverse;
@@ -271,7 +277,7 @@ footer {
 .home .walk .walk-text {
   width: 50%;
 }
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   .home .walk .walk-text {
     width: 100%;
   }
@@ -285,7 +291,7 @@ footer {
 .home .walk .walk-text .btn {
   font-size: 16px;
   background: black;
-  width: 84%;
+  width: 80px;
   height: 35px;
   margin-top: 10px;
   cursor: pointer;
@@ -294,7 +300,7 @@ footer {
   color: white;
   padding: 9px 0;
 }
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   .home .walk .walk-text .btn {
     font-size: 20px;
     width: 100%;
@@ -308,7 +314,7 @@ footer {
   width: 46%;
   margin-left: 4%;
 }
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   .home .walk .walk-img {
     width: 100%;
     padding-bottom: 20px;
