--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,12 +5,12 @@
     .space {
       border-radius: 10px;
       width: 100%;
-      @media @mobile {
+      @media @phone {
         width: 100%;
       }
     }
 
-    @media @mobile {
+    @media @phone {
       flex-direction: column;
     }
 
@@ -27,16 +27,24 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    @media @mobile {
+    @media @phone {
       flex-wrap: nowrap;
       flex-direction: column;
     }
+
+    .sky,
+    .launch {
+      @media @phone {
+        display: none;
+      }
+    }
+
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
-      @media @mobile {
+      @media @phone {
         width: 90%;
         margin-left: 20px;
       }
@@ -61,13 +69,13 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
-    @media @mobile {
+    @media @phone {
       padding: 50px 10px;
       flex-direction: column-reverse;
     }
     .walk-text {
       width: 50%;
-      @media @mobile {
+      @media @phone {
         width: 100%;
       }
       h3 {
@@ -86,7 +94,7 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      @media @mobile {
+      @media @phone {
         width: 100%;
         padding-bottom: 20px;
       }
