--- a/less/variables.less
+++ b/less/variables.less
@@ -25,5 +25,5 @@
 
 // Mobile var
 
-@tablet: ~"(max-width: 768px)";
-@mobile: ~"(max-width: 400px)";
+@mobile: ~"(max-width: 500px)";
+@phone: ~"(max-width: 500px)";
