button hover added

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -18,7 +18,10 @@
     color:@font-color;
     padding: 9px 0;
 
-
+&:hover {
+  color:black;
+  background:grey;
+}
 
     @media @phone{
         font-size: 20px;
