--- a/css/index.css
+++ b/css/index.css
@@ -300,6 +300,10 @@ footer {
   color: white;
   padding: 9px 0;
 }
+.home .walk .walk-text .btn:hover {
+  color: black;
+  background: grey;
+}
 @media (max-width: 500px) {
   .home .walk .walk-text .btn {
     font-size: 20px;
