--- a/less/home-page.less
+++ b/less/home-page.less
@@ -95,14 +95,17 @@
       width: 46%;
       margin-left: 4%;
       @media @phone {
+        margin:auto;
         width: 100%;
         padding-bottom: 20px;
+        .center()
       }
 
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
+        
       }
     }
   }
